--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/AxelRuLo/NodeIOT#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "socket.io": "^4.3.2"
+    "socket.io": "^4.3.2",
+    "ws": "^8.2.3"
   }
 }
